# iflow-cli-skills

./: .gitignore  README.md  README.rst  ruff.toml
.iflow/schemas/: branch-state.json  workflow-state.json
.iflow/skills/: skill_cli.py  skill_manager.py
.iflow/skills/.shared-state/: api-docs.md  architecture-spec.md  changelog.md  pipeline-status.md  project-spec.md  test-plan.md
.iflow/skills/client/: SKILL.md  config.json
.iflow/skills/dev-team/: SKILL.md  workflow-automation.md
.iflow/skills/devops-engineer/: SKILL.md  config.json
.iflow/skills/documentation-specialist/: SKILL.md  config.json
.iflow/skills/evaluator/: SKILL.md
.iflow/skills/git-flow/: SKILL.md  config.json  git-flow.py
.iflow/skills/git-manage/: SKILL.md  config.json  git-manage.py
.iflow/skills/product-manager/: SKILL.md  config.json
.iflow/skills/project-manager/: SKILL.md  config.json
.iflow/skills/python-project-builder-tdd/: skill.md
.iflow/skills/python-project-builder-tdd/template/: .gitignore  FEATURES.md  QUALITY.md  README.md  TESTING.md  pyproject.toml
.iflow/skills/python-project-builder-tdd/template/src/: __init__.py
.iflow/skills/python-project-builder-tdd/template/tests/: __init__.py  conftest.py  test_example.py
.iflow/skills/python-project-builder-tdd/template/tests/e2e/: __init__.py  test_api.py
.iflow/skills/python-project-builder-tdd/template/tests/integration/: __init__.py  test_workflows.py
.iflow/skills/python-project-builder-tdd/template/tests/unit/: __init__.py  test___init__.py
.iflow/skills/qa-engineer/: SKILL.md  config.json
.iflow/skills/rst-writer/: SKILL.md
.iflow/skills/security-engineer/: SKILL.md  config.json
docs/: iflow_skills_design.md  roles.md  skills.md  team_flow.md
(+148 files in other folders)
